fixed project set-up page, increased cropper visibility

--- a/static/css/setup.css
+++ b/static/css/setup.css
@@ -14,7 +14,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 75%;
-    max-height: 50%;
     width: 100%;
     background: #fff;
     border-radius: 7px;
@@ -86,6 +85,7 @@ h1 {
 .wksp-image-block {
     display: flex;
     justify-content: center;
+    max-height: 50%;
 }
 
 .set-up-form {
@@ -94,9 +94,7 @@ h1 {
     align-content: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
     gap: 1.2rem;
-
 }
 
 .set-up {
@@ -122,25 +120,28 @@ h1 {
 }
 
 .cviform-label {
-    /*display: inline-block;*/
-    /*background-color: #1f3156;*/
-    color: black;
     padding: 10px 20px;
     border: none;
-    cursor: pointer; /* Cursor changes to indicate clickable */
-    border-radius: 10px;
-    font-size: 35px; /* Text size */
-    text-align: center; /* Center text */
-    height: 50px;
-    width: 250px;
+    cursor: pointer;
+    text-align: center;
+    max-height: 15vh;
 }
 
 .input-container {
-    height: 50%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* Centers horizontally if needed */
+    align-items: center;
     gap: 1.2rem;
+}
+
+.image-box {
+    max-height: 80%;
+    max-width: 80%;
+}
+
+.cropper-point.point-se {
+    height: 35px !important;
+    width: 35px !important;
 }
